force-app/main/default/objects/EU_COVID_19_Response__c/EU_COVID_19_Response__c.object-meta.xml
<CustomObject>
    <description>COVID-19 Response for EMEA</description>
    <label>COVID-19 Response</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COVID-19 Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>