force-app/main/default/objects/EU_COVID_19_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>COVID-19 Responses</relationshipLabel>
    <relationshipName>COVID_19_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>