force-app/main/default/objects/EU_COVID_19_Response__c/fields/Additional_capacity_support_needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_capacity_support_needed__c</fullName>
    <inlineHelpText>What additional / specific support is needed to help ramping up / restarting elective surgeries? Please specify in Comments.</inlineHelpText>
    <label>Additional capacity/support needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional/reallocation of instrument</fullName>
            </value>
            <value>
                <fullName>Additional inventory</fullName>
            </value>
            <value>
                <fullName>Increase need of specific product(s)</fullName>
            </value>
            <value>
                <fullName>No support needed</fullName>
            </value>
            <value>
                <fullName>OR support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of ordinary hour delivery</fullName>
            </value>
            <value>
                <fullName>Pathway optimization</fullName>
            </value>
            <value>
                <fullName>Patient awareness</fullName>
            </value>
            <value>
                <fullName>Reduced length of stay</fullName>
            </value>
            <value>
                <fullName>Weekend/public holiday OR support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>