force-app/main/default/objects/EU_COVID_19_Response__c/fields/Average_waiting_time__c.field-meta.xml
<CustomField>
    <fullName>Average_waiting_time__c</fullName>
    <inlineHelpText>What is the average waiting time for a patient between the date of their consent to the date of surgery?</inlineHelpText>
    <label>Average waiting time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>5 weeks</fullName>
            </value>
            <value>
                <fullName>6 weeks</fullName>
            </value>
            <value>
                <fullName>7 weeks</fullName>
            </value>
            <value>
                <fullName>8 weeks</fullName>
            </value>
            <value>
                <fullName>9 weeks</fullName>
            </value>
            <value>
                <fullName>10 weeks</fullName>
            </value>
            <value>
                <fullName>11 weeks</fullName>
            </value>
            <value>
                <fullName>12 weeks</fullName>
            </value>
            <value>
                <fullName>13 weeks</fullName>
            </value>
            <value>
                <fullName>14 weeks</fullName>
            </value>
            <value>
                <fullName>15 weeks</fullName>
            </value>
            <value>
                <fullName>16 weeks</fullName>
            </value>
            <value>
                <fullName>17 weeks</fullName>
            </value>
            <value>
                <fullName>18 weeks</fullName>
            </value>
            <value>
                <fullName>19 weeks</fullName>
            </value>
            <value>
                <fullName>20 weeks</fullName>
            </value>
            <value>
                <fullName>21 weeks</fullName>
            </value>
            <value>
                <fullName>22 weeks</fullName>
            </value>
            <value>
                <fullName>23 weeks</fullName>
            </value>
            <value>
                <fullName>24 weeks</fullName>
            </value>
            <value>
                <fullName>25 weeks</fullName>
            </value>
            <value>
                <fullName>26 weeks</fullName>
            </value>
            <value>
                <fullName>27 weeks</fullName>
            </value>
            <value>
                <fullName>28 weeks</fullName>
            </value>
            <value>
                <fullName>29 weeks</fullName>
            </value>
            <value>
                <fullName>30 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>