force-app/main/default/objects/EU_COVID_19_Response__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>SET</fullName>
            </value>
            <value>
                <fullName>Spine/CMF-T</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>