force-app/main/default/objects/EU_COVID_19_Response__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>CASE($User.Country, 
&quot;AT&quot;, &quot;Austria&quot;,
&quot;BE&quot;, &quot;Belgium&quot;,
&quot;CH&quot;, &quot;Switzerland&quot;,
&quot;CZ&quot;, &quot;Czech Republic&quot;,
&quot;DE&quot;, &quot;Germany&quot;,
&quot;DK&quot;, &quot;Denmark&quot;,
&quot;ES&quot;, &quot;Spain&quot;,
&quot;FI&quot;, &quot;Finland&quot;,
&quot;FR&quot;, &quot;France&quot;,
&quot;GR&quot;, &quot;Greece&quot;,
&quot;IE&quot;, &quot;Ireland&quot;,
&quot;IT&quot;, &quot;Italy&quot;,
&quot;NL&quot;, &quot;Netherlands&quot;,
&quot;NO&quot;, &quot;Norway&quot;,
&quot;PL&quot;, &quot;Poland&quot;,
&quot;PT&quot;, &quot;Portugal&quot;,
&quot;SE&quot;, &quot;Sweden&quot;,
&quot;SK&quot;, &quot;Slovakia&quot;,
&quot;UK&quot;, &quot;United Kingdom&quot;,
&quot;&quot;)</defaultValue>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Greece</fullName>
            </value>
            <value>
                <fullName>Iceland</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Slovakia</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>