force-app/main/default/objects/EU_COVID_19_Response__c/fields/Customer_Segment_as_per_Recovery_Model__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_as_per_Recovery_Model__c</fullName>
    <label>Customer Segment (as per Recovery Model)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private East</fullName>
            </value>
            <value>
                <fullName>Private West</fullName>
            </value>
            <value>
                <fullName>Public East</fullName>
            </value>
            <value>
                <fullName>Public West</fullName>
            </value>
            <value>
                <fullName>Private And Covid Center</fullName>
            </value>
            <value>
                <fullName>Private And Non Covid Center</fullName>
            </value>
            <value>
                <fullName>Public And Covid Center</fullName>
            </value>
            <value>
                <fullName>Public And Non Covid Center</fullName>
            </value>
            <value>
                <fullName>Uni</fullName>
            </value>
            <value>
                <fullName>Covid Hospital</fullName>
            </value>
            <value>
                <fullName>Private Hospital</fullName>
            </value>
            <value>
                <fullName>Public Hospital</fullName>
            </value>
            <value>
                <fullName>University Hospital</fullName>
            </value>
            <value>
                <fullName>North/Central General Hospitals</fullName>
            </value>
            <value>
                <fullName>North/Central Ortho-focused</fullName>
            </value>
            <value>
                <fullName>North/Central Ortho-strictly</fullName>
            </value>
            <value>
                <fullName>South General Hospitals</fullName>
            </value>
            <value>
                <fullName>South Ortho-focused</fullName>
            </value>
            <value>
                <fullName>South Ortho-strictly</fullName>
            </value>
            <value>
                <fullName>Covid-19 Centers</fullName>
            </value>
            <value>
                <fullName>Fast Recov Speed</fullName>
            </value>
            <value>
                <fullName>Medium Recov Speed</fullName>
            </value>
            <value>
                <fullName>Private Ortho Clinics</fullName>
            </value>
            <value>
                <fullName>Slow Recov Speed</fullName>
            </value>
            <value>
                <fullName>Insurance Companies</fullName>
            </value>
            <value>
                <fullName>Large Distributors</fullName>
            </value>
            <value>
                <fullName>Others (5 groups combined)</fullName>
            </value>
            <value>
                <fullName>Public Hospital Region C</fullName>
            </value>
            <value>
                <fullName>Public Hospital Region D</fullName>
            </value>
            <value>
                <fullName>Public Hospitals Madrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>