force-app/main/default/objects/EU_COVID_19_Response__c/fields/Date_of_100_procedure_level__c.field-meta.xml
<CustomField>
    <fullName>Date_of_100_procedure_level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When exactly do you anticipate that procedure level will reach 100%? Please indicate exact date.</inlineHelpText>
    <label>Date of 100% procedure level</label>
    <type>Date</type>
</CustomField>