force-app/main/default/objects/EU_COVID_19_Response__c/fields/Limitation_for_procedure_ramp_up__c.field-meta.xml
<CustomField>
    <fullName>Limitation_for_procedure_ramp_up__c</fullName>
    <inlineHelpText>What are the limiting factors that slow down or hinder procedure ramp up in 2020?</inlineHelpText>
    <label>Limitation for procedure ramp-up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2nd wave of COVID-19</fullName>
                <isActive>false</isActive>
                <label>2nd wave of COVID-19</label>
            </value>
            <value>
                <fullName>COVID-19 testing capacity</fullName>
            </value>
            <value>
                <fullName>Instrument sets related</fullName>
            </value>
            <value>
                <fullName>Insufficient funding</fullName>
            </value>
            <value>
                <fullName>Low priority for total joint replacement</fullName>
            </value>
            <value>
                <fullName>No limitation</fullName>
            </value>
            <value>
                <fullName>OR capacity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outpatient clinic capacity</fullName>
            </value>
            <value>
                <fullName>PPE availability</fullName>
            </value>
            <value>
                <fullName>Pre-op testing related</fullName>
            </value>
            <value>
                <fullName>Reduced patient consultations</fullName>
            </value>
            <value>
                <fullName>Rehab capacity</fullName>
            </value>
            <value>
                <fullName>Staff capacity</fullName>
            </value>
            <value>
                <fullName>Stricter safety protocols</fullName>
            </value>
            <value>
                <fullName>Sufficient patients availability</fullName>
            </value>
            <value>
                <fullName>Ward capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>