force-app/main/default/objects/EU_COVID_19_Response__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>COVID-19 Responses</relationshipLabel>
    <relationshipName>COVID_19_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>