force-app/main/default/objects/EU_COVID_19_Response__c/fields/Procedures_in_Dec_20__c.field-meta.xml
<CustomField>
    <fullName>Procedures_in_Dec_20__c</fullName>
    <inlineHelpText>Expected procedures in December 2020 (%)</inlineHelpText>
    <label>Procedures in Dec 20 (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>