force-app/main/default/objects/EU_COVID_19_Response__c/fields/Procedures_in_Jul_21__c.field-meta.xml
<CustomField>
    <fullName>Procedures_in_Jul_21__c</fullName>
    <inlineHelpText>Expected procedures in July 2021 (%)</inlineHelpText>
    <label>Procedures in Jul 21 (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>