force-app/main/default/objects/EU_COVID_19_Response__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <label>Product Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Hip</fullName>
            </value>
            <value>
                <fullName>Revision Hip</fullName>
            </value>
            <value>
                <fullName>Partial Knee</fullName>
            </value>
            <value>
                <fullName>Total Knee</fullName>
            </value>
            <value>
                <fullName>Revision Knee</fullName>
            </value>
            <value>
                <fullName>Upper and Lower Extremities</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>SportsMed</fullName>
            </value>
            <value>
                <fullName>Spine - Cervical</fullName>
            </value>
            <value>
                <fullName>Spine - Thoracolumbar</fullName>
            </value>
            <value>
                <fullName>CMF-T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>