force-app/main/default/objects/EU_COVID_19_Response__c/fields/Restart_Date__c.field-meta.xml
<CustomField>
    <fullName>Restart_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the estimated date for restart of elective surgeries?</inlineHelpText>
    <label>Restart Date</label>
    <type>Date</type>
</CustomField>