force-app/main/default/objects/EU_COVID_19_Response__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>de</language>
</ListView>